# GifCapture

./: Cargo.toml  readme.md  rustfmt.toml
assets/: README.md
docs/: ScreenCaptureKit可行性.md  区域框选蒙层方案.md  技术栈.md  架构与数据流.md
scripts/: package_dmg.sh
src/: app.rs  capture.rs  encoder.rs  main.rs  types.rs
